use latest ui-kit; fix layout issue

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -12,7 +12,6 @@ ul {
   display: flex;
   flex-direction: column;
   height: calc(100vh - 70px - 32px);
-  width: 100vw;
   max-width: 100vw;
 
   > [ui-view],
